# Remote-Stethoscope-Pico

./: CMakeLists.txt
examples/usb_analog_mic/: CMakeLists.txt  main.c  usb_descriptors.c
examples/usb_microphone/: main.c  usb_descriptors.c
src/include/pico/: analog_microphone.h
